# redis-wellness

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  .secrets.baseline  CODE_REVIEW_SUMMARY.md  DEMO_SCRIPT.md  Makefile  README.md  REVIEW.md  SENIOR_DEV_REVIEW_OLD_TOOLS.md  WARP.md  docker-compose.yml  import_health.py  import_health_data.py  import_log.txt  lint.sh  rebuild_workout_indexes.py  reload_health_data.py  start.sh  test_compare.py  test_langgraph.py  test_weight_tool.py
.claude/: claude.md
backend/: Dockerfile  PHASE_4_POLISH_SUMMARY.md  docker-entrypoint.sh  example_activity_comparison_output.json  pyproject.toml  test_episodic_memory.py
backend/scripts/: import_health_data.py  load_health_data.py  populate_semantic_memory.py  startup_health_check.py  validate_imports.py  verify_redis_checkpointer.py
backend/src/: cli.py  config.py  constants.py  import_health_data.py  logging_config.py  main.py
backend/src/agents/: __init__.py  _stateful_rag_agent_with_memory_attempt.py.bak  constants.py  health_rag_agent.py  stateful_rag_agent.py  stateful_rag_agent.py.bak  stateless_agent.py
backend/src/api/: agent_routes.py  chat_routes.py  redis_routes.py  routes.py  stateless_routes.py  system_routes.py  tools_routes.py
backend/src/apple_health/: __init__.py  models.py  parser.py  processors.py  tool_models.py
backend/src/data/: __init__.py  semantic_knowledge_base.py
backend/src/models/: __init__.py  chat.py  health.py
backend/src/parsers/: __init__.py  apple_health_parser.py
backend/src/services/: __init__.py  embedding_cache.py  embedding_service.py  episodic_memory_manager.py  health_vectorizer.py  memory_coordinator.py  memory_manager.py  procedural_memory_manager.py  redis_apple_health_manager.py  redis_chat.py  redis_connection.py  redis_health_tool.py  redis_sleep_indexer.py  redis_workout_indexer.py  semantic_memory_manager.py  stateless_chat.py
backend/tests/: IMPLEMENTATION_SUMMARY.md  README.md  conftest.py  test_health_queries_comprehensive.py  test_redis_chat_api.py  test_token_management.py  test_validator_standalone.py  test_with_data.py  test_workout_parsing.py
(+314 files in other folders)
